move toggle-buttons into separate js; apply centralized style to ch04.

--- a/engineering_notebook/ch03.html
+++ b/engineering_notebook/ch03.html
@@ -10,15 +10,6 @@
 
 <body class="theme-green">
 
-    <!-- Toggle Buttons -->
-    <button id="toggle-dark-text-btn" onclick="toggleDarkText()">
-        📝 深色文字：显示
-    </button>
-
-    <button id="toggle-other-elements-btn" onclick="toggleOtherElements()">
-        🎨 装饰元素：显示
-    </button>
-
     <div class="sheet">
         <div class="a4-height-indicator"></div>
         <div class="chapter-marker"></div>
@@ -326,41 +317,7 @@
         <div class="page-number">55</div>
     </div>
 
-    <script>
-        let darkTextVisible = true;
-        let otherElementsVisible = true;
-
-        function toggleDarkText() {
-            darkTextVisible = !darkTextVisible;
-            const btn = document.getElementById('toggle-dark-text-btn');
-
-            if (darkTextVisible) {
-                document.body.classList.remove('hide-dark-text');
-                btn.textContent = '📝 深色文字：显示';
-                btn.style.backgroundColor = 'var(--secondary-color)';
-            } else {
-                document.body.classList.add('hide-dark-text');
-                btn.textContent = '📝 深色文字：隐藏';
-                btn.style.backgroundColor = '#95A5A6';
-            }
-        }
-
-        function toggleOtherElements() {
-            otherElementsVisible = !otherElementsVisible;
-            const btn = document.getElementById('toggle-other-elements-btn');
-
-            if (otherElementsVisible) {
-                document.body.classList.remove('hide-other-elements');
-                btn.textContent = '🎨 装饰元素：显示';
-                btn.style.backgroundColor = '#2E86C1';
-            } else {
-                document.body.classList.add('hide-other-elements');
-                btn.textContent = '🎨 装饰元素：隐藏';
-                btn.style.backgroundColor = '#95A5A6';
-            }
-        }
-    </script>
-
+    <script src="../assets/scripts/toggle-buttons.js"></script>
 </body>
 
 </html>
