corret name 宋书玥 add picture-list

--- a/engineering_notebook/ch02.html
+++ b/engineering_notebook/ch02.html
@@ -106,7 +106,7 @@
         <p><strong>2. Beam (梁)</strong></p>
         <p>一个长长的灰色的条，上面有很多孔。</p>
 
-        <p class="dialogue"><span class="chinese-label">宋书月的感受：</span>
+        <p class="dialogue"><span class="chinese-label">宋书玥的感受：</span>
             “天哪，它好重！而且好长！我试了一下，如果机器人没抓好重心，肯定会被它带着翻跟头，操控起来肯定很难。我们得小心点。”</p>
 
         <img src="../assets/ch02/beam.webp" alt="VEX IQ Pins" style="height: 250px; display: block; margin: 15px auto;">
@@ -176,7 +176,7 @@
             “这也太小了吧！15英寸的高度，根本够不到中间那个高塔啊！高塔的杆子都快有12英寸高了，加上Pin的高度，肯定不够。我要怎么把升降机塞进去？”</p>
 
         <h2>变形魔法 &lt;SG3&gt;</h2>
-        <p><strong>宋书月</strong>指着规则书兴奋地说：“快看这条！比赛开始后，垂直方向<strong>无限扩展</strong>！”</p>
+        <p><strong>宋书玥</strong>指着规则书兴奋地说：“快看这条！比赛开始后，垂直方向<strong>无限扩展</strong>！”</p>
         <p><span class="chinese-label">全员欢呼：</span> 耶！这意味着我们可以做一个能伸长的“长颈鹿”！只要比赛一开始，我们就让它变高！</p>
 
         <!-- <div class="img-placeholder">
@@ -435,7 +435,7 @@
         <div class="a4-height-indicator"></div>
         <div class="chapter-marker"></div>
         <h1>2.5 团队赛：换手惊魂</h1>
-        <p>宋书月最关心这个规则，因为她是操控手。规则说必须在 35秒 到 25秒 之间换人。</p>
+        <p>宋书玥最关心这个规则，因为她是操控手。规则说必须在 35秒 到 25秒 之间换人。</p>
 
         <p class="dialogue">“如果超时了会怎么样？”</p>
         <p>王老师说：“会被取消资格！那场比赛就 0 分了！”</p>
@@ -539,7 +539,7 @@
         <div class="chapter-marker"></div>
         <h1>策略 A：低空快跑流 (Low & Fast)</h1>
 
-        <p><span class="chinese-label">想法：</span> 宋书月建议我们做一个跑得飞快的车，专攻地面的得分区。不去管那个难搞的高塔。</p>
+        <p><span class="chinese-label">想法：</span> 宋书玥建议我们做一个跑得飞快的车，专攻地面的得分区。不去管那个难搞的高塔。</p>
 
         <p><span class="chinese-label">目标：</span> 用3色 Stack 尽量填满地面上的 2 个三角形区 (红/蓝) 和 1 个正方形区 (红/蓝)，以及 Floor Goal (橙色！)。
         </p>
