--- a/engineering_notebook/ch03.html
+++ b/engineering_notebook/ch03.html
@@ -177,7 +177,7 @@
             <br>- <strong>翻转：</strong> 如果还要翻转手腕，又要 1 个。
         </p>
 
-        <p class="dialogue"><strong>宋书月：</strong> “哎呀，电机不够用了！我想做个四轮独立驱动的豪车，看来没戏了。”</p>
+        <p class="dialogue"><strong>宋书玥：</strong> “哎呀，电机不够用了！我想做个四轮独立驱动的豪车，看来没戏了。”</p>
         <p><strong>决定：</strong> 我们只能省着用，底盘就用 2 个电机。</p>
         <img src="../assets/ch03/3_2_motors.webp" alt="无限垂直扩展" style="height:260px; display: block; margin: 0 auto;">
 
