--- a/engineering_notebook/ch04.html
+++ b/engineering_notebook/ch04.html
@@ -100,7 +100,7 @@
             </div>
         </div>
 
-        <p><strong>宋书月：</strong>“我还想给底盘装 4 个电机呢，那样推力大，速度快。”</p>
+        <p><strong>宋书玥：</strong>“我还想给底盘装 4 个电机呢，那样推力大，速度快。”</p>
         <p><strong>印涵邸：</strong>“不行不行，那就没电机做手臂了！我们是去得分的，不是去开赛车的。”</p>
 
         <p><strong>最终决定：</strong> 省着点花！底盘只用 2 个电机。把剩下的资源留给那些复杂的动作。</p>
@@ -161,7 +161,7 @@
         <div class="chapter-marker"></div>
         <h1>4.4 底盘设计 - 齿轮比</h1>
 
-        <p><strong>宋书月：</strong> “我要跑得比风还快！这样才能抢在对手前面把 Pin 都捡走。”</p>
+        <p><strong>宋书玥：</strong> “我要跑得比风还快！这样才能抢在对手前面把 Pin 都捡走。”</p>
         <p><strong>叶恒嘉：</strong> “那我们用大齿轮带小齿轮，做个加速装置吧！”</p>
 
         <div class="math-paper">
@@ -247,63 +247,11 @@
         <div class="page-number">71</div>
     </div>
 
-    <!-- ================= PAGE 72: 抓手决策矩阵 ================= -->
-    <div class="sheet">
-        <div class="a4-height-indicator"></div>
-        <div class="chapter-marker"></div>
-        <h1>4.5 Pin的抓取设计(3)</h1>
-
-        <h3>抓手大PK</h3>
-
-        <table>
-            <tr>
-                <th>比什么？</th>
-                <th>铲子</th>
-                <th>滚筒吸入</th>
-                <th>主动夹爪</th>
-            </tr>
-            <tr>
-                <td>抓得紧吗？</td>
-                <td>1 (掉)</td>
-                <td>3</td>
-                <td class="winner">5 (紧)</td>
-            </tr>
-            <tr>
-                <td>能堆叠吗？</td>
-                <td>1</td>
-                <td>2 (难对准)</td>
-                <td class="winner">5 (准)</td>
-            </tr>
-            <tr>
-                <td>能翻转吗？</td>
-                <td>1</td>
-                <td>2</td>
-                <td class="winner">5 (容易)</td>
-            </tr>
-            <tr>
-                <td><strong>总分</strong></td>
-                <td>3</td>
-                <td>7</td>
-                <td class="winner"><strong>15 (赢了!)</strong></td>
-            </tr>
-        </table>
-
-        <div class="sticky-note">
-            <strong>决定：</strong> 做一个两指夹爪！
-        </div>
-
-        <div class="footer">
-            <span class="handwriting-box">日期：</span>
-            <span class="handwriting-box">记录人：</span>
-        </div>
-        <div class="page-number">72</div>
-    </div>
-
     <!-- ================= PAGE 73: 抓手细节 - 防滑 ================= -->
     <div class="sheet">
         <div class="a4-height-indicator"></div>
         <div class="chapter-marker"></div>
-        <h1>4.5 Pin的抓取设计(4)</h1>
+        <h1>4.5 Pin的抓取设计(3)</h1>
 
         <h3>小秘密：橡皮筋大法</h3>
 
@@ -707,7 +655,7 @@
 
         <h3>怎么开车？(Controls)</h3>
 
-        <p>宋书月设计了最顺手的按键方案：</p>
+        <p>宋书玥设计了最顺手的按键方案：</p>
 
         <p><strong>左摇杆 + 右摇杆：</strong> 像开坦克一样，左手推左轮，右手推右轮。这样转弯最灵活！</p>
         <p><strong>L键 (L1/L2)：</strong> 控制手臂上下。左手食指控制，很方便。</p>
