--- a/engineering_notebook/ch07.html
+++ b/engineering_notebook/ch07.html
@@ -156,7 +156,7 @@
         <p>一代车虽然让我们学会了怎么造机器人，但是在那次“翻车现场”之后，大家都很受打击。</p>
 
         <p class="dialogue"><strong>叶恒嘉：</strong> “太难受了，明明结构都对了，就是控制不住。”</p>
-        <p class="dialogue"><strong>宋书月：</strong> “而且那个爪子，抓个 Pin 都要瞄半天，比赛时候哪有那么多时间瞄准啊。”</p>
+        <p class="dialogue"><strong>宋书玥：</strong> “而且那个爪子，抓个 Pin 都要瞄半天，比赛时候哪有那么多时间瞄准啊。”</p>
         <p class="dialogue"><strong>叶恒瑞：</strong> “别灰心！我们已经有数据了。我们知道哪里不好，改就是了！”</p>
 
         <h3>二代车改进目标：</h3>
@@ -192,7 +192,7 @@
             [图片：二代车底盘照片，屏幕上显示着“Speed Mode: 75%”]
         </div>
 
-        <p><strong>效果：</strong> 宋书月试了一下，说：“现在感觉像是开了辅助驾驶，稳多了！”</p>
+        <p><strong>效果：</strong> 宋书玥试了一下，说：“现在感觉像是开了辅助驾驶，稳多了！”</p>
 
         <div class="footer">
             <span>记录人：印涵邸</span>
@@ -308,7 +308,7 @@
             <tr>
                 <td>第 2 次</td>
                 <td>成功</td>
-                <td>宋书月微调了好久才挂上去。</td>
+                <td>宋书玥微调了好久才挂上去。</td>
             </tr>
             <tr>
                 <td>第 3 次</td>
@@ -603,7 +603,7 @@
         </div>
         
         <div class="dialogue">
-            <strong>宋书月（操控）：</strong> “有了定位角和气动爪，我感觉自己就是赛场上的神！完全不用担心失误。”
+            <strong>宋书玥（操控）：</strong> “有了定位角和气动爪，我感觉自己就是赛场上的神！完全不用担心失误。”
         </div>
         
         <div class="dialogue">
@@ -655,7 +655,7 @@
 
         <div class="footer">
             <span>2026年2月16日</span>
-            <span>全员签字：叶恒瑞、叶恒嘉、宋书月、印涵邸</span>
+            <span>全员签字：叶恒瑞、叶恒嘉、宋书玥、印涵邸</span>
         </div>
         <div class="page-number">190</div>
     </div>
