--- a/engineering_notebook/extras/ch06 - 训练笔记 - v2.html
+++ b/engineering_notebook/extras/ch06 - 训练笔记 - v2.html
@@ -321,7 +321,7 @@
                 <td class="col-label">总结</td>
                 <td colspan="3" class="col-content">
                     <p>配合默契度提升了，不再出现“互相等待”的尴尬场面。但是一代车的操控性问题越来越明显，大家开始讨论是否需要降速或改结构。</p>
-                    <div class="signature">签名：宋书月</div>
+                    <div class="signature">签名：宋书玥</div>
                 </td>
             </tr>
         </table>
@@ -526,7 +526,7 @@
                     <div class="log-entry">
                         <div class="log-text">
                             <h3>手动赛发挥出色</h3>
-                            <p>宋书月和叶恒瑞配合默契，二代车的稳定性立了大功。我们手动部分打出了 <strong>184分</strong>（注：此处可能包含自动分或为多次叠加，原文如此，暂且记录为惊人的高分表现）。</p>
+                            <p>宋书玥和叶恒瑞配合默契，二代车的稳定性立了大功。我们手动部分打出了 <strong>184分</strong>（注：此处可能包含自动分或为多次叠加，原文如此，暂且记录为惊人的高分表现）。</p>
                             <p><strong>关键点：</strong> 全程没有掉一个 Pin，所有高塔都挂满了。二代车的“长臂”优势完全发挥出来了。</p>
                         </div>
                         <div class="log-img tilt-left">[图片：记分牌上显示着令人骄傲的分数]</div>
@@ -538,7 +538,7 @@
                 <td class="col-label">总结</td>
                 <td colspan="3" class="col-content">
                     <p>技能赛证明了我们的车本身具备很强的得分能力。但是自动赛部分我们还没准备好，这是下一步的短板。</p>
-                    <div class="signature">签名：宋书月</div>
+                    <div class="signature">签名：宋书玥</div>
                 </td>
             </tr>
         </table>
