--- a/engineering_notebook/extras/ch06 - 训练笔记.html
+++ b/engineering_notebook/extras/ch06 - 训练笔记.html
@@ -239,7 +239,7 @@
             </tr>
             <tr class="meta-row">
                 <td style="text-align: center; font-weight: bold;">参加人员</td>
-                <td colspan="3">宋书月（主操作）、叶恒嘉、叶恒瑞、印涵邸</td>
+                <td colspan="3">宋书玥（主操作）、叶恒嘉、叶恒瑞、印涵邸</td>
             </tr>
             <tr>
                 <td class="col-label">内<br>容</td>
@@ -271,7 +271,7 @@
                 <td class="col-label">总<br>结</td>
                 <td colspan="3" class="col-content">
                     <p>能够完成基本的抓取动作。熟悉了一代车的“漂移”手感。操作手需要练习“点按”摇杆来控制刹车。</p>
-                    <div class="signature">签名：宋书月</div>
+                    <div class="signature">签名：宋书玥</div>
                 </td>
             </tr>
         </table>
@@ -345,7 +345,7 @@
             </tr>
             <tr class="meta-row">
                 <td style="text-align: center; font-weight: bold;">参加人员</td>
-                <td colspan="3">宋书月、叶恒瑞</td>
+                <td colspan="3">宋书玥、叶恒瑞</td>
             </tr>
             <tr>
                 <td class="col-label">内<br>容</td>
@@ -395,7 +395,7 @@
             </tr>
             <tr class="meta-row">
                 <td style="text-align: center; font-weight: bold;">参加人员</td>
-                <td colspan="3">印涵邸（代码）、宋书月（测试）</td>
+                <td colspan="3">印涵邸（代码）、宋书玥（测试）</td>
             </tr>
             <tr>
                 <td class="col-label">内<br>容</td>
@@ -412,7 +412,7 @@
                         <div class="log-text">
                             <h3>8.26 目标：实测自动抓取</h3>
                             <p><strong>逻辑：</strong> <code>if (Distance < 50mm) { 闭合爪子; 举臂; }</code></p>
-                            <p><strong>效果：</strong> 太爽了！宋书月只要把车开过去，机器人就“嗷呜”一口自动吃掉 Pin。</p>
+                            <p><strong>效果：</strong> 太爽了！宋书玥只要把车开过去，机器人就“嗷呜”一口自动吃掉 Pin。</p>
                             <p><strong>效率：</strong> 每次抓取节省约 1-2 秒。</p>
                         </div>
                         <div class="log-img rotate-neg">[图片：距离传感器特写，安装在爪子内部]</div>
@@ -455,7 +455,7 @@
                         <div class="log-text">
                             <h3>目标：适应规则 <span class="rule-ref">&lt;GG11&gt;</span></h3>
                             <p><strong>规则：</strong> 必须在 25s-35s 之间交换遥控器。早换或晚换都会导致 DQ (取消资格)。</p>
-                            <p><strong>状况：</strong> 第一次模拟时，宋书月开得太投入，完全忘了看时间，一直开到了 20秒。</p>
+                            <p><strong>状况：</strong> 第一次模拟时，宋书玥开得太投入，完全忘了看时间，一直开到了 20秒。</p>
                             <p><strong>后果：</strong> 如果是比赛，这一场就是 0 分。</p>
                         </div>
                         <div class="log-img">[图片：两个操作手慌乱交接遥控器，背景计时器模糊显示0:24]</div>
@@ -547,7 +547,7 @@
             </tr>
             <tr class="meta-row">
                 <td style="text-align: center; font-weight: bold;">参加人员</td>
-                <td colspan="3">宋书月、叶恒瑞</td>
+                <td colspan="3">宋书玥、叶恒瑞</td>
             </tr>
             <tr>
                 <td class="col-label">内<br>容</td>
@@ -576,7 +576,7 @@
                 <td class="col-label">总<br>结</td>
                 <td colspan="3" class="col-content">
                     <p>VEX IQ 是团队项目。学会避让和沟通比自己闷头得分更重要。</p>
-                    <div class="signature">签名：宋书月</div>
+                    <div class="signature">签名：宋书玥</div>
                 </td>
             </tr>
         </table>
@@ -732,7 +732,7 @@
                 <td class="col-label">总<br>结</td>
                 <td colspan="3" class="col-content">
                     <p>拆解是为了更好的重逢。二代车，我们来了！</p>
-                    <div class="signature">签名：宋书月、叶恒嘉、叶恒瑞、印涵邸</div>
+                    <div class="signature">签名：宋书玥、叶恒嘉、叶恒瑞、印涵邸</div>
                 </td>
             </tr>
         </table>
