ch04: pics till 4.6(3)

--- a/engineering_notebook/ch04.html
+++ b/engineering_notebook/ch04.html
@@ -235,7 +235,7 @@
 
             [图片：草图，画了一个两指夹爪夹住 Pin 的样子，标注了“稳”]
         </div> -->
-        <img src="../assets/ch04/4_5_2_claw.webp" alt="铲车"
+        <img src="../assets/ch04/4_5_2_claw_no_rubber.webp" alt="铲车"
             style="height:320px; display: block; margin: 50px auto; border-radius: 20px;">
 
         <p>虽然一次只能抓一个，比较慢，但是我们要的是<strong>准确度</strong>！只有抓稳了才能堆高高。</p>
@@ -257,9 +257,11 @@
 
         <p>虽然决定做夹爪，但我们试了一下，塑料爪子抓塑料 Pin，还是太滑了！稍微一抖就掉了。</p>
 
-        <p class="dialogue"><strong>叶恒嘉：</strong> “我有办法！给爪子穿上‘鞋子’！”</p>
+        <p class="dialogue"><strong>叶恒嘉：</strong> “我有办法！给爪子戴上‘手套’！”</p>
 
         <p>他找来了 VEX 的橡胶皮筋，缠在爪子的内侧。哇！效果立竿见影！</p>
+        <img src="../assets/ch04/4_5_3_claw_with_rubber.webp" alt="铲车"
+            style="height:320px; display: block; margin: 50px auto; border-radius: 20px;">
 
         <div class="blackboard">
             <strong>实验记录：</strong><br>
@@ -267,10 +269,10 @@
             有皮筋：抓 10 次，掉 1 次！
         </div>
 
-        <div class="img-placeholder" style="height: 200px;">
+        <!-- <div class="img-placeholder" style="height: 200px;">
 
             [图片：特写，画出了爪子上缠绕的橙色橡皮筋，旁边写着“摩擦力 Up!”]
-        </div>
+        </div> -->
 
         <div class="footer">
             <span class="handwriting-box">日期：</span>
@@ -293,10 +295,17 @@
             <br>1. 举起来的过程中，爪子始终保持水平，不会把 Pin 倒出来。
             <br>2. 结构简单，这也是 VEX 这里的经典结构。
         </p>
+        <p><strong>缺点：</strong>
+            <br>1. <strong>不够直：</strong> 它是画着弧线往上举的，不是直直向上，挂 Pin 的时候很难对准。
+            <br>2. <strong>举不高：</strong> 因为机器人开始时必须缩成一团（有尺寸限制），手臂不能做得太长，所以够不到太高的地方。
+            <br>3. <strong>容易翻：</strong> 手臂伸出去太远，机器人很容易向前“栽跟头”。
+        </p>
+        <img src="../assets/ch04/4_6_1_4-bar.webp" alt="4连杆"
+            style="height:280px; display: block; margin: 50px auto; border-radius: 20px;">
 
-        <div class="img-placeholder" style="height: 150px;">
+        <!-- <div class="img-placeholder" style="height: 150px;">
 
-        </div>
+        </div> -->
 
         <div class="footer">
             <span class="handwriting-box">日期：</span>
@@ -311,19 +320,39 @@
         <div class="chapter-marker"></div>
         <h1>4.6 抬升设计(2)</h1>
 
-        <h3>方案 B：双反四连杆 (DR4B)</h3>
-        <p><strong>原理：</strong> 两个四连杆叠罗汉！</p>
-        <p><strong>优点：</strong> 能举得超级高！而且是直上直下的。</p>
-        <p><strong>缺点：</strong> 太重了！太复杂了！我们怕做出来车头太重，一刹车就翻跟头。</p>
-
-        <div class="img-placeholder" style="height: 150px;">
-
-            [图片：草图，画了一个很高的剪叉结构，旁边标注“太重了”]
+        <div style="display: flex; align-items: center; gap: 20px;">
+            <div style="flex: 1;">
+                <h3>方案 B：双反四连杆 (DR4B)</h3>
+                <p><strong>原理：</strong> 两个四连杆叠罗汉！</p>
+                <p><strong>优点：</strong> 能举得超级高！而且是直上直下的。</p>
+                <p><strong>缺点：</strong> 太重了！太复杂了！我们怕做出来车头太重，一刹车就翻跟头。</p>
+            </div>
+            <div style="flex: 1;">
+                <img src="../assets/ch04/4_6_2_dr4b.webp" alt="反向双4连杆"
+                    style="width: 280px; height: auto; border-radius: 20px;">
+            </div>
+        </div>
+        <div style="display: flex; align-items: center; gap: 20px;margin-top: 10px;">
+            <div style="flex: 1;">
+                <h3>方案 C：链条升降</h3>
+                        <p><strong>原理：</strong> 像电梯一样。</p>
+                        <p><strong>优点：</strong>
+                            <br>1. 直直的，好瞄准。
+                            <br>2. 很稳，不栽跟头。
+                        </p>
+                        <p><strong>缺点：</strong> 需要专门的链条导轨，摩擦力大，容易卡住。</p>            </div>
+            <div style="flex: 1;">
+                <img src="../assets/ch04/4_6_2_hoist.webp" alt="反向双4连杆"
+                    style="width: 280px; height: auto; border-radius: 20px;">
+            </div>
         </div>
 
-        <h3>方案 C：链条升降</h3>
-        <p><strong>原理：</strong> 像电梯一样。</p>
-        <p><strong>缺点：</strong> 摩擦力大，容易卡住，而且我们需要专门的链条导轨。</p>
+        <!-- <div class="img-placeholder" style="height: 150px;">
+
+            [图片：草图，画了一个很高的剪叉结构，旁边标注“太重了”]
+        </div> -->
+
+
 
         <div class="footer">
             <span class="handwriting-box">日期：</span>
@@ -332,37 +361,11 @@
         <div class="page-number">75</div>
     </div>
 
-    <!-- ================= PAGE 76: 4.2 头脑风暴 - 抬升 ================= -->
+    <!-- ================= PAGE 76: 4.6 头脑风暴 - 抬升 ================= -->
     <div class="sheet">
         <div class="a4-height-indicator"></div>
         <div class="chapter-marker"></div>
         <h1>4.6 抬升设计(3)</h1>
-
-        <p><strong>最终选择：</strong> 还是用最经典的<strong>四连杆 (4-Bar)</strong> 吧！</p>
-
-        <p class="dialogue"><strong>叶恒瑞：</strong> “我们算了一下高度，普通的四连杆大概能举到 11 英寸左右。虽然离高塔的 12 英寸还差一点点，但是作为一代车，我们可以先练习地面堆叠。”
-        </p>
-
-        <p>大家同意了。先求稳，二代车再想办法加高。</p>
-
-        <div class="img-placeholder" style="height: 250px;">
-
-            [图片：一代车侧面草图，画出了四连杆举起的样子]
-        </div>
-
-        <div class="footer">
-            <span class="handwriting-box">日期：</span>
-            <span class="handwriting-box">记录人：</span>
-        </div>
-        <div class="page-number">76</div>
-    </div>
-
-    <!-- ================= PAGE 77: 抬升决策矩阵 ================= -->
-    <div class="sheet">
-        <div class="a4-height-indicator"></div>
-        <div class="chapter-marker"></div>
-        <h1>4.6 抬升设计(4)</h1>
-
         <h3>抬升大PK</h3>
 
         <table>
@@ -370,7 +373,7 @@
                 <th>比什么？</th>
                 <th>四连杆</th>
                 <th>双反四连杆</th>
-                <th>链条电梯</th>
+                <th class="winner">链条电梯</th>
             </tr>
             <tr>
                 <td>高度</td>
@@ -380,42 +383,51 @@
             </tr>
             <tr>
                 <td>稳定性</td>
-                <td class="winner">5 (很稳)</td>
+                <td>2 (容易翻)</td>
                 <td>2 (晃)</td>
-                <td>3</td>
+                <td class="winner">5 (很稳)</td>
             </tr>
             <tr>
                 <td>轻便</td>
                 <td class="winner">5 (轻)</td>
                 <td>2 (重)</td>
-                <td>3</td>
+                <td>4</td>
             </tr>
             <tr>
                 <td>搭建难度</td>
                 <td class="winner">5 (简单)</td>
                 <td>2 (难)</td>
-                <td>1 (极难)</td>
+                <td>3</td>
             </tr>
             <tr>
                 <td><strong>总分</strong></td>
-                <td class="winner"><strong>18 (胜出)</strong></td>
+                <td>15</td>
                 <td>11</td>
-                <td>11</td>
+                <td class="winner"><strong>16 (胜出)</strong></td>
             </tr>
         </table>
+        <p><strong>最终选择：</strong> 经过一番激烈讨论，我们决定采用 <strong>链条升降</strong> 方案！</p>
+
+        <p class="dialogue"><strong>叶恒瑞：</strong> “虽然链条升降的结构稍微复杂一点，但它直上直下的特性，能让我们在堆叠 Pin 和挂 Beam 时实现更精准的对位。而且，重心稳定，不容易翻车，这对于我们冲刺高分至关重要！”</p>
+        <p>大家一致认为，为了比赛的精准度和稳定性，值得投入更多的搭建精力。</p>
+
+        <!-- <img src="../assets/ch04/4_6_3_chain_lift_concept.webp" alt="链条升降概念图"
+            style="height: 250px; display: block; margin: 30px auto; border-radius: 20px;"> -->
 
         <div class="footer">
             <span class="handwriting-box">日期：</span>
             <span class="handwriting-box">记录人：</span>
         </div>
-        <div class="page-number">77</div>
+        <div class="page-number">76</div>
     </div>
+
+
 
     <!-- ================= PAGE 78: 抬升力矩计算 ================= -->
     <div class="sheet">
         <div class="a4-height-indicator"></div>
         <div class="chapter-marker"></div>
-        <h1>4.6 抬升设计(5)</h1>
+        <h1>4.6 抬升设计(4)</h1>
 
         <h3>力气够不够？</h3>
 
@@ -444,7 +456,7 @@
     <div class="sheet">
         <div class="a4-height-indicator"></div>
         <div class="chapter-marker"></div>
-        <h1>4.6 抬升设计(6)</h1>
+        <h1>4.6 抬升设计(5)</h1>
 
         <h3>神奇的橡皮筋</h3>
 
@@ -662,9 +674,11 @@
         <p><strong>R键 (R1/R2)：</strong> 控制爪子开合。右手食指控制。</p>
         <p><strong>F键：</strong> 控制手腕翻转。</p>
 
-        <div class="img-placeholder" style="height: 200px;">
+        <!-- <div class="img-placeholder" style="height: 200px;">
 
-        </div>
+        </div> -->
+        <img src="../assets/ch04/4_9_5_IQ Gen 2 Controller LayoutConfig.webp" alt="遥控器按键布局"
+            style="height:400px; display: block; margin: 30px auto; border-radius: 20px;">
 
         <div class="footer">
             <span class="handwriting-box">日期：</span>
