--- a/engineering_notebook/ch04.html
+++ b/engineering_notebook/ch04.html
@@ -407,10 +407,11 @@
             </tr>
         </table>
         <p><strong>最终选择：</strong> 经过一番激烈讨论，我们决定采用 <strong>链条升降</strong> 方案！</p>
-
         <p class="dialogue"><strong>叶恒瑞：</strong> “虽然链条升降的结构稍微复杂一点，但它直上直下的特性，能让我们在堆叠 Pin 和挂 Beam 时实现更精准的对位。而且，重心稳定，不容易翻车，这对于我们冲刺高分至关重要！”</p>
         <p>大家一致认为，为了比赛的精准度和稳定性，值得投入更多的搭建精力。</p>
-
+        <h3>力气够不够？</h3>
+        <p>Beam 很重（170克），再加上爪子，一个电机举不起来怎么办？</p>
+        <p>还记得第三章我们讨论过的机械魔法吗？借助能让<strong>减速齿轮</strong>带来的力量放大和<strong>橡皮筋</strong>提供的“重力补偿”，就可以轻松解决。</p>
         <!-- <img src="../assets/ch04/4_6_3_chain_lift_concept.webp" alt="链条升降概念图"
             style="height: 250px; display: block; margin: 30px auto; border-radius: 20px;"> -->
 
@@ -421,59 +422,6 @@
         <div class="page-number">76</div>
     </div>
 
-
-
-    <!-- ================= PAGE 78: 抬升力矩计算 ================= -->
-    <div class="sheet">
-        <div class="a4-height-indicator"></div>
-        <div class="chapter-marker"></div>
-        <h1>4.6 抬升设计(4)</h1>
-
-        <h3>力气够不够？</h3>
-
-        <p>Beam 很重（170克），再加上爪子，我们担心一个电机举不起来。</p>
-
-        <div class="math-paper">
-            <strong>力矩 = 力 x 距离</strong><br>
-            手臂长：30 厘米<br>
-            重量：约 300 克 (3 牛顿)<br>
-            <strong>需要的力矩：</strong> 0.9 牛·米
-        </div>
-
-        <p>可是VEX IQ电机只有大约 0.4 牛·米的力量。<strong>完蛋了，举不动！</strong></p>
-        <p><strong>解决方案：</strong>
-            1. <strong>减速齿轮：</strong> 用 12齿 带动 60齿，力气变大 5 倍！<br>
-            2. <strong>橡皮筋：</strong> 在手臂后面挂橡皮筋帮忙拉。</p>
-
-        <div class="footer">
-            <span class="handwriting-box">日期：</span>
-            <span class="handwriting-box">记录人：</span>
-        </div>
-        <div class="page-number">78</div>
-    </div>
-
-    <!-- ================= PAGE 79: 橡皮筋补偿 ================= -->
-    <div class="sheet">
-        <div class="a4-height-indicator"></div>
-        <div class="chapter-marker"></div>
-        <h1>4.6 抬升设计(5)</h1>
-
-        <h3>神奇的橡皮筋</h3>
-
-        <p>我们在手臂根部挂了几根橡皮筋。这真是太神奇了！</p>
-        <p><strong>效果：</strong> 就算不通电，手臂也能自己悬在半空中，不下坠。这就叫“重力补偿”。电机只需要用一点点力气就能指挥手臂上下动了。</p>
-
-        <div class="img-placeholder" style="height: 250px;">
-
-            [图片：特写草图，画出了橡皮筋挂在四连杆根部的三角形挂点上]
-        </div>
-
-        <div class="footer">
-            <span class="handwriting-box">日期：</span>
-            <span class="handwriting-box">记录人：</span>
-        </div>
-        <div class="page-number">79</div>
-    </div>
 
     <!-- ================= PAGE 80: Beam 怎么拿？(1) ================= -->
     <div class="sheet">
