--- a/engineering_notebook/ch03.html
+++ b/engineering_notebook/ch03.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>工程笔记 - 第三章：我们的小小科学家之路 (2276A)</title>
-    <link rel="stylesheet" href="settings/style.css">
+    <link rel="stylesheet" href="assets/styles/style.css">
 </head>
 
 <body class="theme-green">
