--- a/engineering_notebook/ch05.html
+++ b/engineering_notebook/ch05.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>工程笔记 - 第五章：搭建与调试 (2276A)</title>
-    <link rel="stylesheet" href="settings/style.css">
+    <link rel="stylesheet" href="assets/styles/style.css">
 </head>
 <body class="theme-reddish-brown">
 
